tests/fixtures/invalid/dict_in_bool.py
# Cannot use 'in' with Dict[str, int] and Bool
x: bool = {"a": 1} in True
